Added some docker and maven configuration